completed DOM Manipulation index.html

--- a/15_DOM_Manipulation/index.html
+++ b/15_DOM_Manipulation/index.html
@@ -14,6 +14,14 @@
         <a href="#">JS DOM Manipulation</a>
     </nav>
 
+    <div>
+        <h1 id="msg-1"></h1>
+        <button onclick="greet('Good Morning', 'yellow')">Good Morning</button>
+        <button onclick="greet('Good Afternoon', 'orangered')">Good Afternoon</button>
+        <button onclick="greet('Good Evening', 'purple')">Good Evening</button>
+        <button onclick="greet('Good Night', 'red')">Good Night</button>
+    </div>
+
 
     <script src="app.js"></script>
 </body>
