greet buttons added

--- a/15.1_DOM_Exercises/index.html
+++ b/15.1_DOM_Exercises/index.html
@@ -9,7 +9,26 @@
 </head>
 
 <body>
+<!-- <div>
+        <h1 id="msg-1"></h1>
+        <button onclick="wishMe('Good Morning', 'blue')">Good Morning</button>
+        <button onclick="wishMe('Good Afternoon', 'orange')">Good Afternoon</button>
+        <button onclick="wishMe('Good Evening', 'orangered')">Good Evening</button>
+        <button onclick="wishMe('Good Night', 'darkslategray')">Good Night</button>
+        <button onclick="wishMe('Good day', 'yellow')">Good Day</button>
+    </div> -->
 
+<div>
+    <h1 id="msg-1"></h1>
+    <button id="gm-btn">Good Morning</button>
+    <button id="ga-btn">Good Afternoon</button>
+    <button id="ge-btn">Good Evening</button>
+    <button id="gn-btn">Good Night</button>
+    <button id="gd-btn">Good Day</button>
+</div>
+<br>
+
+<script src="app.js"></script>
 </body>
 
 </html>
