--- a/15.1_DOM_Exercises/index.html
+++ b/15.1_DOM_Exercises/index.html
@@ -28,6 +28,11 @@
 </div>
 <br>
 
+<div>
+    <h3>SMS App</h3>
+    <textarea name="text" placeholder="Enter text here" id="text-area" cols="25" rows="5" maxlength="100"></textarea>
+    <h2>Characters Left: <span id="char-left">0</span>/100</h2>
+</div>
 <script src="app.js"></script>
 </body>
 
