Added to KeyUp Event

--- a/16_JS_Keyup_Events/index.html
+++ b/16_JS_Keyup_Events/index.html
@@ -19,6 +19,16 @@
         <a href="#" class="navbar-brand">Keyup Event</a>
     </nav>
 
+    <!-- Key Up Event -->
+
+    <br>
+    <br>
+
+    <form>
+        <input type="text" id="username">
+        <h2 id="msg"></h2>
+    </form>
+
 
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
