--- a/17_JS_Change_Events_Select_Box/index.html
+++ b/17_JS_Change_Events_Select_Box/index.html
@@ -19,7 +19,45 @@
         <a href="#" class="navbar-brand">Change Event on Select Box</a>
     </nav>
 
-    
+    <!-- Change Event on Select Box -->
+    <div class="contai">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-header bg-primary text-white">
+                        <h3>Change Event</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col">
+
+                            </div>
+                            <div class="col">
+                                <form>
+                                    <div class="form-group">
+                                        <select class="form-control" id="lang-select">
+                                            <option value="">Select a language</option>
+                                            <option value="HTML">HTML</option>
+                                            <option value="CSS">CSS</option>
+                                            <option value="JavaScript">JavaScript</option>
+                                            <option value="React">React</option>
+                                            <option value="Angular">Angular</option>
+                                        </select>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col">
+                                <h2 id="lang-option"></h2>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
