--- a/17_JS_Change_Events_Select_Box/index.html
+++ b/17_JS_Change_Events_Select_Box/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <!-- Change Event on Select Box -->
-    <div class="contai">
+    <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <div class="card">
