Change Password modified

--- a/18_JS_Change_Password/index.html
+++ b/18_JS_Change_Password/index.html
@@ -19,7 +19,36 @@
         <a href="#" class="navbar-brand">Change Password</a>
     </nav>
 
-    
+    <!-- Change password -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header bg-warning text-white">
+                        <h3>Change Password</h3>
+                    </div>
+                    <div class="card-body">
+                        <form action="">
+                            <div class="input-group mb-3">
+                                <input id="password" type="password" class="form-control"
+                                    aria-label="Text input with checkbox">
+                                <div class="input-group-append">
+                                    <div class="input-group-text">
+                                        <input id="checkbox" type="checkbox"
+                                            aria-label="Checkbox for following text input">
+                                        <span class="ml-2"> Show Password</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
