--- a/18_JS_Change_Password/index.html
+++ b/18_JS_Change_Password/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Bootstrap/all.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="../Bootstrap/all.css">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../Bootstrap/css/mdb.css">
-    <link rel="stylesheet" href="../Bootstrap/css/style.css">
+    <link rel="stylesheet" href="../Bootstrap/css/style.css"> -->
     <link rel="stylesheet" href="style.css">
     <title>Change Password</title>
 
@@ -50,10 +51,12 @@
 
 
     <!-- Bootstrap JS files -->
-    <script src="../Bootstrap/js/jquery.js"></script>
+
+    <!-- <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
     <script src="../Bootstrap/js/bootstrap.js"></script>
-    <script src="../Bootstrap/js/mdb.js"></script>
+    <script src="../Bootstrap/js/mdb.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <!-- Local JS file -->
     <script src="app.js"></script>
