Container added to Range Select html

--- a/19_JS_Range_Select/index.html
+++ b/19_JS_Range_Select/index.html
@@ -19,7 +19,16 @@
         <a href="#" class="navbar-brand">Range Select</a>
     </nav>
 
-    
+    <!-- Range Select -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                
+            </div>
+        </div>
+    </div>
+
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
