--- a/19_JS_Range_Select/index.html
+++ b/19_JS_Range_Select/index.html
@@ -23,7 +23,23 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                
+                <div class="card">
+                    <div class="card-header bg-primary text-white">
+                        <h3>Select an Amount</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <input type="range" class="form-control-range" id="formControlRange" min="0" max="5000">
+                            </div>
+                            <div class="col-md-4">
+                                <h3 class="text-primary">₦
+                                    <span id="amount"></span>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
