--- a/20_JS_SMS_App/index.html
+++ b/20_JS_SMS_App/index.html
@@ -19,7 +19,32 @@
         <a href="#" class="navbar-brand">SMS App</a>
     </nav>
 
-    
+    <!-- Range Select -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header bg-primary text-white">
+                        <h3>SMS App</h3>
+                    </div>
+                    <div class="card-body bg-light">
+                        <form>
+                            <div class="form-group">
+                                <textarea maxlength="100" id="text-area" class="form-control" rows="4"
+                                    placeholder="Your Text Here"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="card-footer">
+                        <h3>The Characters Remaining : <span class="fontweight-bold text-primary"
+                                id="char-count">0</span>/100</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
