--- a/20_JS_SMS_App/index.html
+++ b/20_JS_SMS_App/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Bootstrap/all.css">
+    <!-- <link rel="stylesheet" href="../Bootstrap/all.css">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../Bootstrap/css/mdb.css">
-    <link rel="stylesheet" href="../Bootstrap/css/style.css">
+    <link rel="stylesheet" href="../Bootstrap/css/style.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>SMS App</title>
 
@@ -30,14 +31,14 @@
                     <div class="card-body bg-light">
                         <form>
                             <div class="form-group">
-                                <textarea maxlength="100" id="text-area" class="form-control" rows="4"
+                                <textarea maxlength="150" id="text-area" class="form-control" rows="4"
                                     placeholder="Your Text Here"></textarea>
                             </div>
                         </form>
                     </div>
                     <div class="card-footer">
                         <h3>The Characters Remaining : <span class="fontweight-bold text-primary"
-                                id="char-count">0</span>/100</h3>
+                                id="char-count">0</span>/150</h3>
                     </div>
                 </div>
             </div>
@@ -46,11 +47,11 @@
 
 
     <!-- Bootstrap JS files -->
-    <script src="../Bootstrap/js/jquery.js"></script>
+    <!-- <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
     <script src="../Bootstrap/js/bootstrap.js"></script>
-    <script src="../Bootstrap/js/mdb.js"></script>
-
+    <script src="../Bootstrap/js/mdb.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <!-- Local JS file -->
     <script src="app.js"></script>
 </body>
