Lagos Time added

--- a/21_JS_Digital_Watches/index.html
+++ b/21_JS_Digital_Watches/index.html
@@ -19,7 +19,26 @@
         <a href="#" class="navbar-brand">Digital Watches</a>
     </nav>
 
-    
+    <!-- Digital Watches -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body bg-success text-white text-center">
+                        <h5>Africa/Lagos</h5>
+                        <div class="display-4">Africa/Lagos</div>
+                        <p id="lagos-date">18/1/2021</p>
+                        <h4 id="lagos-time" class="display-4">09:22:34 PM</h4>
+                    </div>
+                </div>
+            </div>
+            
+    </div>
+    <br>
+    <br>
+
+
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
