New York Time added

--- a/21_JS_Digital_Watches/index.html
+++ b/21_JS_Digital_Watches/index.html
@@ -28,11 +28,22 @@
                         <h5>Africa/Lagos</h5>
                         <div class="display-4">Africa/Lagos</div>
                         <p id="lagos-date">18/1/2021</p>
-                        <h4 id="lagos-time" class="display-4">09:22:34 PM</h4>
+                        <h4 id="lagos-time" class="display-4">09:00:00 AM</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body bg-primary text-white text-center">
+                        <h5>America/New_York</h5>
+                        <div class="display-4">USA</div>
+                        <p id="usa-date">18/01/2021</p>
+                        <h4 id="usa-time" class="display-4">09:00:00 AM</h4>
                     </div>
                 </div>
             </div>
             
+        </div>
     </div>
     <br>
     <br>
