Shanghai Time added

--- a/21_JS_Digital_Watches/index.html
+++ b/21_JS_Digital_Watches/index.html
@@ -42,13 +42,20 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body bg-danger text-white text-center">
+                        <h5>Asia/Shanghai</h5>
+                        <div class="display-4">China</div>
+                        <p id="china-date">18/01/2021</p>
+                        <h4 id="china-time" class="display-4">09:00:00 AM</h4>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <br>
     <br>
-
-
 
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
