Math Table modified

--- a/22_JS_Math_Table/index.html
+++ b/22_JS_Math_Table/index.html
@@ -19,6 +19,29 @@
         <a href="#" class="navbar-brand">Keyup Event</a>
     </nav>
     
+    <!-- Math Table -->
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col">
+                <div class="card-header bg-secondary text-white">
+                    <h3>Kid's Math Table</h3>
+                </div>
+                <div class="card-body bg-light">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label>Enter A Number Here</label>
+                                    <input id="req-number" type="number" class="form-control" placeholder="Your Number">
+                                </div>                                
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
