--- a/22_JS_Math_Table/index.html
+++ b/22_JS_Math_Table/index.html
@@ -33,7 +33,13 @@
                                 <div class="form-group">
                                     <label>Enter A Number Here</label>
                                     <input id="req-number" type="number" class="form-control" placeholder="Your Number">
-                                </div>                                
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="form-group">
+                                        <label for="multiplier">Select The Multiplier</label>
+                                        <input type="range" class="custom-range" id="multiplier" min="1" max="15">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
