Result section added

--- a/22_JS_Math_Table/index.html
+++ b/22_JS_Math_Table/index.html
@@ -48,6 +48,45 @@
         </div>
     </div>
 
+    <!-- Result Section -->
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col">
+                <div class="card">
+                    <div class="card-body bg-light">
+                        <div class="row align-items-center">
+                            <div class="col-md-2">
+                                <h1 class="display-2">
+                                    <span class="badge badge-secondary" id="number">1</span>
+                                </h1>
+                            </div>
+                            <div class="col-md-2">
+                                <h1>
+                                    <i class="fa fa-times fa-2x text-secondary"></i>
+                                </h1>
+                            </div>
+                            <div class="col-md-2">
+                                <h1 class="display-2">
+                                    <span class="badge badge-secondary" id="multiples">1</span>
+                                </h1>
+                            </div>
+                            <div class="col-md2">
+                                <h1>
+                                    <i class="fa fa-equals fa-2x text-secondary"></i>
+                                </h1>
+                            </div>
+                            <div class="col-md-2">
+                                <h1 class="display-2">
+                                    <span class="badge badge-secondary" id="resultF">1</span>
+                                </h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
