--- a/22_JS_Math_Table/index.html
+++ b/22_JS_Math_Table/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <!-- Result Section -->
-    <div class="container mt-3">
+    <div class="container mt-3 text-center">
         <div class="row">
             <div class="col">
                 <div class="card">
