--- a/23_JS_Stop_Watch/index.html
+++ b/23_JS_Stop_Watch/index.html
@@ -18,7 +18,27 @@
     <nav class="navbar navbar-dark bg-dark">
         <a href="#" class="navbar-brand">JS Stop Watch</a>
     </nav>
-    
+
+    <!-- JS Stop Watch -->
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 m-auto">
+                <div class="card">
+                    <div class="card-header bg-primary text-white text-center">
+                        <h3>JS Stop Watch</h3>
+                    </div>
+                    <div class="card-body text-center">
+                        <h1 class="display-2">
+                            <span id="minute">00</span>:
+                            <span id="seconds">00</span>:
+                            <span id="m-seconds">00</span>
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
