--- a/23_JS_Stop_Watch/index.html
+++ b/23_JS_Stop_Watch/index.html
@@ -33,6 +33,9 @@
                             <span id="seconds">00</span>:
                             <span id="m-seconds">00</span>
                         </h1>
+                        <button id="start-btn" class="btn btn-success">Start</button>
+                        <button id="stop-btn" class="btn btn-danger">Stop</button>
+                        <button id="reset-btn" class="btn btn-warning">Reset</button>
                     </div>
                 </div>
             </div>
