Card header added to index.html

--- a/24_JS_Form_Validation/index.html
+++ b/24_JS_Form_Validation/index.html
@@ -19,7 +19,23 @@
         <a href="#" class="navbar-brand">JS Form Validations</a>
     </nav>
 
-    
+    <!-- JS Form Validations -->
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-4 m-auto">
+                <div class="card">
+                    <div class="card-header bg-secondary text-white text-center">
+                        <h3>Register here</h3>
+
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- Bootstrap JS files -->
     <script src=" ../Bootstrap/js/jquery.js"></script>
