--- a/24_JS_Form_Validation/index.html
+++ b/24_JS_Form_Validation/index.html
@@ -29,6 +29,32 @@
                         <h3>Register here</h3>
 
                     </div>
+                    <div class="card-body">
+                        <form action="" id="register-form">
+                            <div class="form-group">
+                                <input id="username" type="text" class="form-control" placeholder="Username">
+                                <div id="username-feedback"></div>
+                            </div>
+                            <div class="form-group">
+                                <input id="email" type="email" class="form-control" placeholder="E-Mail">
+                                <div id="email-feedback"></div>
+                            </div>
+
+                            <div class="form-group">
+                                <input id="password" type="password" class="form-control" placeholder="password">
+                                <div id="password-feedback"></div>
+                            </div>
+
+                            <div class="form-group">
+                                <input id="c-password" type="password" class="form-control"
+                                    placeholder="Confirm Password">
+                                <div id="c-password-feedback"></div>
+                            </div>
+                            <div class="text-center">
+                                <input id="" value="Register" type="submit" class="btn btn-secondary"">
+                            </div>
+                        </form>
+                    </div>
                     
                 </div>
             </div>
