--- a/24_JS_Form_Validation/index.html
+++ b/24_JS_Form_Validation/index.html
@@ -36,22 +36,22 @@
                                 <input id="username" type="text" class="form-control" placeholder="Username">
                                 <div id="username-feedback"></div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group mt-3">
                                 <input id="email" type="email" class="form-control" placeholder="E-Mail">
                                 <div id="email-feedback"></div>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group mt-3">
                                 <input id="password" type="password" class="form-control" placeholder="password">
                                 <div id="password-feedback"></div>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group mt-3">
                                 <input id="c-password" type="password" class="form-control"
                                     placeholder="Confirm Password">
                                 <div id="c-password-feedback"></div>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center mt-3">
                                 <input id="" value="Register" type="submit" class="btn btn-secondary"">
                             </div>
                         </form>
