--- a/25_Local_Session_Storage/index.html
+++ b/25_Local_Session_Storage/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    
+    <nav>
+        <a href="#">JS Local & Session Storage</a>
+    </nav>
+
     <script src="app.js"></script>
 </body>
 
