Navbar added to index.html

--- a/26_JS_Image_Upload/index.html
+++ b/26_JS_Image_Upload/index.html
@@ -14,7 +14,10 @@
 
 <body>
 
-    
+    <nav class="navbar navbar-dark bg-dark">
+        <a href="#" class="navbar-brand">Keyup Event</a>
+    </nav>
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
