Header added to index.html

--- a/26_JS_Image_Upload/index.html
+++ b/26_JS_Image_Upload/index.html
@@ -15,8 +15,23 @@
 <body>
 
     <nav class="navbar navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">Keyup Event</a>
+        <a href="#" class="navbar-brand">Image Upload</a>
     </nav>
+
+    <!-- Image Upload -->
+
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header bg-primary text-white">
+                        <h3>Image Upload</h3>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
