--- a/26_JS_Image_Upload/index.html
+++ b/26_JS_Image_Upload/index.html
@@ -27,7 +27,18 @@
                     <div class="card-header bg-primary text-white">
                         <h3>Image Upload</h3>
                     </div>
-                    
+                    <div class="card-body">
+                        <form id="upload-form" enctype="multipart/form-data">
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="customFile">
+                                <label class="custom-file-label" for="customFile">Choose file</label>
+                            </div>
+                            <div class="mt-3">
+                                <input type="submit" value="Upload" class="btn btn-primary btn-sm">
+                                <button class="btn btn-danger btn-sm" id="remove-btn">Remove All</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
