Image container added to index.html

--- a/26_JS_Image_Upload/index.html
+++ b/26_JS_Image_Upload/index.html
@@ -44,6 +44,13 @@
         </div>
     </div>
 
+    <!-- Image as data -->
+    <div class="container mt-3">
+        <div class="row">
+
+        </div>
+    </div>
+
     <!-- Bootstrap JS files -->
     <script src="../Bootstrap/js/jquery.js"></script>
     <script src="../Bootstrap/js/popper.js"></script>
