--- a/26_JS_Image_Upload/index.html
+++ b/26_JS_Image_Upload/index.html
@@ -48,7 +48,11 @@
     <!-- Image as data -->
     <div class="container mt-3">
         <div class="row">
-
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img1.jpg" alt="" class="img-fluid card-img">
+                </div>
+            </div>
         </div>
     </div>
 
