--- a/26_JS_Image_Upload/index.html
+++ b/26_JS_Image_Upload/index.html
@@ -49,8 +49,12 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col-md-3">
-                <div class="card">
+                <div class="card img-card">
                     <img src="img1.jpg" alt="" class="img-fluid card-img">
+                    <div class="card-body">
+                        <h3 class="card-title">Image</h3>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque sint beatae odio vel praesentium asperiores!</p>
+                    </div>
                 </div>
             </div>
         </div>
