--- a/26_JS_Image_Upload/index.html
+++ b/26_JS_Image_Upload/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="card-body">
                         <form id="upload-form" enctype="multipart/form-data"> <!-- The enctype attribute specifies how the form-data should be encoded when submitting it to the server. -->
-                            <div class="custom-file">
+                            <div class="custom-file"> <!-- custom file from bootstrap -->
                                 <input type="file" class="custom-file-input" id="customFile">
                                 <label class="custom-file-label" for="customFile">Choose file</label>
                             </div>
