--- a/28_JS_ES6_Features/index.html
+++ b/28_JS_ES6_Features/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    
+    <!-- ES6 also called ES2015 -->
+    <!-- There are other versions ES7, ES8..ES11 -->
+    <!-- ES6 is a major release and supports major features compared to Vanilla Javascript -->
+
 </body>
 
 </html>
