more notes added

--- a/28_JS_ES6_Features/index.html
+++ b/28_JS_ES6_Features/index.html
@@ -12,6 +12,14 @@
     <!-- ES6 also called ES2015 -->
     <!-- There are other versions ES7, ES8..ES11 -->
     <!-- ES6 is a major release and supports major features compared to Vanilla Javascript -->
+    <!-- features include
+        Template Strings (`) - back tick operator
+        Operational Parameters
+        Arrow functions
+        for-of loops
+        Destructuring
+        Spread Operator
+        Classes -->
 
 </body>
 
