nav bar created

--- a/28_JS_ES6_Features/index.html
+++ b/28_JS_ES6_Features/index.html
@@ -21,6 +21,10 @@
         Spread Operator
         Classes -->
 
+        <nav>
+            <a href="#">JS ES6 Features</a>
+        </nav>
+
 </body>
 
 </html>
