note on module type added

--- a/31_JS_Modules/index.html
+++ b/31_JS_Modules/index.html
@@ -13,7 +13,7 @@
         <a href="#">JS Modules</a>
     </nav>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js"></script> <!-- Must configure type = 'module' -->
 </body>
 
 </html>
