--- a/32_JS_SetInterval_SetTimeout/index.html
+++ b/32_JS_SetInterval_SetTimeout/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav>
-        <a href="#">JS Set Interval</a>
+        <a href="#">JS Set Interval | Set Timeout</a>
     </nav>
 
     <script src="app.js"></script>
