--- a/34_JS_Callbacks/index.html
+++ b/34_JS_Callbacks/index.html
@@ -13,6 +13,10 @@
         <a href="#">JS Callbacks</a>
     </nav>
 
+    <table border="2">
+        
+    </table>
+
     <script src="app.js"></script>
 </body>
 
