--- a/34_JS_Callbacks/index.html
+++ b/34_JS_Callbacks/index.html
@@ -14,6 +14,11 @@
     </nav>
 
     <table border="2">
+        <thead>
+            <tr>
+                
+            </tr>
+        </thead>
         
     </table>
 
