--- a/34_JS_Callbacks/index.html
+++ b/34_JS_Callbacks/index.html
@@ -16,7 +16,9 @@
     <table border="2">
         <thead>
             <tr>
-                
+                <th>Emp ID</th>
+                <th>Emp Name</th>
+                <th>Emp Age</th>
             </tr>
         </thead>
         
