table body created

--- a/34_JS_Callbacks/index.html
+++ b/34_JS_Callbacks/index.html
@@ -21,7 +21,9 @@
                 <th>Emp Age</th>
             </tr>
         </thead>
-        
+        <tbody id="table-body">
+
+        </tbody>
     </table>
 
     <script src="app.js"></script>
