--- a/35_JS_Promises/index.html
+++ b/35_JS_Promises/index.html
@@ -7,8 +7,10 @@
     <title>JS Promises</title>
 </head>
 
-<body> 
-    
+<body>
+    <nav>
+        <a href="#">JS Promises</a>
+    </nav>
 </body>
 
 </html>
