--- a/36_JS_Real_Promises/index.html
+++ b/36_JS_Real_Promises/index.html
@@ -13,7 +13,19 @@
         <a href="#">JS Real Promises</a>
     </nav>
 
-    
+    <table border="2">
+        <thead>
+            <tr>
+                <th>EMP ID</th>
+                <th>EMP NAME</th>
+                <th>EMP AGE</th>
+            </tr>
+        </thead>
+        <tbody id="table-body">
+
+        </tbody>
+    </table>
+
     <script src="app.js"></script>
 </body>
 
