nav tag added to index.html

--- a/37_Async_Await/index.html
+++ b/37_Async_Await/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    
+    <nav>
+        <a href="#">JS Async Await</a>
+    </nav>
+
     <script src="app.js"></script>
 </body>
 
