--- a/37_Async_Await/index.html
+++ b/37_Async_Await/index.html
@@ -14,7 +14,13 @@
     </nav>
 
     <table border="2">
-        
+        <thead>
+            <tr>
+                <th>EMP ID</th>
+                <th>EMP NAME</th>
+                <th>EMP AGE</th>
+            </tr>
+        </thead>
         
     </table>
 
