table body added to index.html

--- a/37_Async_Await/index.html
+++ b/37_Async_Await/index.html
@@ -21,7 +21,9 @@
                 <th>EMP AGE</th>
             </tr>
         </thead>
-        
+        <tbody id="table-body">
+
+        </tbody>
     </table>
 
     <script src="app.js"></script>
