--- a/37_Async_Await/index.html
+++ b/37_Async_Await/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <title>JS Async Await</title>
-    
+    <style>
+        table {
+            width: 80%;
+            margin: 50px auto;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
