Nav and Header created

--- a/ASYNC_JAVASCRIPT_BY_BRAD/index2.html
+++ b/ASYNC_JAVASCRIPT_BY_BRAD/index2.html
@@ -7,6 +7,11 @@
     <title>Async JS</title>
 </head>
 <body>
+    <nav>
+        <h1>Async Promises Callbacks</h1>
+    </nav>
+
+
     
 </body>
 </html>
